test/sema/typeck/pattern/lit-string-wrong-type.out
error: Int64 expected but got type String.
--> lit-string-wrong-type.dora:2:14
 | fn f(x: (String, Int64)) {
 |     let (_y, "a") = x;
                ~~~
 | }
 | 
1 error found.
