test/sema/typeck/pattern/lit-string-wrong-type.dora
fn f(x: (String, Int64)) {
    let (_y, "a") = x;
}
